--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,8 @@
     font-weight: 400;
     font-size: 18px;
     text-align: center;
-margin: 30px 374px;
+    width: 691px;
+    margin: auto;
     color: #FFFFFF;
 }
 .banner{
@@ -33,5 +34,56 @@ margin: 30px 374px;
     padding: 16px 12px;
     border: none;
     border-radius: 5px;
+
+}
+.donate{
+    text-align: center;
+}
+.donate-h{
+    font-weight: 700;
+    font-size: 45px;
+    color: #121212;
+    padding: 130px 0 20px 0;
+}
+.donate-dsc{
+    font-size: 18px;
+    line-height: 28px;
+    color: #707070;
+    width: 600px;
+    margin: auto;
+}
+.amount{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+    color: #707070;
+}
+.taka{
+    padding: 43px 25px;
+    background-color: #FAFAFA;
+    border-radius: 5px;
+    margin: 22px;
+}
+.amount .taka{
+    width: 135px;
+}
+.taka:hover{
+    background-color: #FFEEEE;
+    color: #FF5959;
+}
+.other-a{
+    text-align: center;  
+    border-bottom: 1px solid #DADADA;
+    border-radius: 5px;
+    width: 765px;
+    margin: auto;
+}
+.o-amount{
+    border: none;
+    text-align: center;
+    margin-bottom: 9.5px;
 
 }
