--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,8 +22,10 @@
    width: 100%;
    height: 60vh;
    margin: auto;
-   background-image: url(/images/donation12.png), linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
+   background-image: url(/images/donation13.jpg), linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
    background-blend-mode: overlay;
+   background-repeat: no-repeat;
+   background-size: cover;
 
 }
 .p-btn{
@@ -86,4 +88,42 @@
     text-align: center;
     margin-bottom: 9.5px;
 
+}
+.plan{
+    display: flex;
+    justify-content: center;
+
+}
+.plan1{
+    background: rgba(79, 157, 166, 0.1);
+    width: 360px;
+    height: 352px;
+    margin: 24PX;
+    border-radius: 5px;
+}
+.plan2{
+    background: rgba(255, 89, 89, 0.1);
+    width: 360px;
+    height: 352px;  
+    margin: 24PX;
+    border-radius: 5px;
+}
+.plan3{
+    background: #fff4d6;
+    width: 360px;
+    height: 352px;
+    margin: 24PX;
+    border-radius: 5px;
+}
+img{
+    padding-top: 65px;
+    padding-left: 20px;
+}
+.plan-h{
+    padding-top: 16px;
+    padding-left: 20px;
+}
+.plan-dsc{
+    padding-top: 10px;
+    padding-left: 20px;
 }
