--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,11 @@
     padding: 0;
     font-family: 'Inter', sans-serif;
 }
+.container{
+    max-width: 1440px;
+    width: 95%;
+    margin: 0 auto;
+}
 .h-line{
     font-weight: 700;
     font-size: 65px;
@@ -22,7 +27,7 @@
    width: 100%;
    height: 60vh;
    margin: auto;
-   background-image: url(/images/donation13.jpg), linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
+   background-image: url(../images/donation13.jpg), linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
    background-blend-mode: overlay;
    background-repeat: no-repeat;
    background-size: cover;
